--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body {
                 linear-gradient(127deg, #9FB4FF, black, 70.71%),
                 linear-gradient(336deg, #FFF56D, black 70.71%); */
 
-    background: linear-gradient(100deg,#FFD93D, #4D96FF);
+    background: linear-gradient(#FFD93D,white, #4D96FF);
     font-family: 'Ubuntu';
 
 }   
